# ais-better

./: .firebaserc  CNAME  README.md  package-lock.json  package.json
.firebase/: hosting.YnVpbGQ.cache
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  gh-pages.yml
AIS-project/: LICENSE
backend/: main.py  pyproject.toml  requirements.txt  trained_model.pkl
public/: index.html  styles.css
src/: ActionButton.js  ActionButton.tsx  App.js  Header.js  Header.tsx  MindApp.tsx  PreviewSection.js  PreviewSection.tsx  ScoreSection.js  ScoreSection.tsx  index.tsx  styles.css
